--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,10 @@
         "laminas/laminas-servicemanager": "^3.6.0",
         "lcobucci/jwt": "^4.0.0",
         "league/csv": "^9.2",
-        "league/flysystem": "^2.1.0",
+        "league/flysystem": "^3.7.0",
+        "league/flysystem-aws-s3-v3": " ^3.0.0",
+        "league/flysystem-local": "^3.0.0",
+        "league/flysystem-ftp": "^3.0.0",
         "league/oauth2-client": "^2.6.0",
         "league/oauth2-server": "^8.3.0",
         "mikey179/vfsstream": "^1.6.7",
@@ -222,10 +225,6 @@
         {
             "type": "git",
             "url": "git@github.com:spryker/commerce-k6-performance-tests.git"
-        },
-        {
-            "type": "git",
-            "url": "git@github.com:thephpleague/flysystem.git"
         }
     ],
     "scripts": {
