FRW-7435 Update buddy.yml

--- a/buddy.yml
+++ b/buddy.yml
@@ -101,7 +101,7 @@
             - key: 'STORAGE_REDIS_HOST'
               value: 'redis'
               type: 'VAR'
-      - action: 'OpenAPI schema validation.'
+      - action: 'OpenAPI schema validation'
         type: 'BUILD'
         docker_image_name: 'library/node'
         docker_image_tag: '18'
