FRW-7417 adjusted `oneToMany` DataExchangeAPI  relations to be editable. (#8672)
FRW-7417 adjusted oneToMany DataExchangeAPI relations to be editable.

--- a/src/Pyz/Zed/DynamicEntity/data/installer/configuration.json
+++ b/src/Pyz/Zed/DynamicEntity/data/installer/configuration.json
@@ -88,7 +88,7 @@
             },
             {
                 "name": "productAbstractLocalizedAttributes",
-                "isEditable": false,
+                "isEditable": true,
                 "childDynamicEntityConfiguration": {
                     "tableAlias": "product-abstract-localized-attributes"
                 },
@@ -101,7 +101,7 @@
             },
             {
                 "name": "productAbstractCategories",
-                "isEditable": false,
+                "isEditable": true,
                 "childDynamicEntityConfiguration": {
                     "tableAlias": "product-categories"
                 },
@@ -192,7 +192,7 @@
             },
             {
                 "name": "productRelations",
-                "isEditable": false,
+                "isEditable": true,
                 "childDynamicEntityConfiguration": {
                     "tableAlias": "product-relations"
                 },
@@ -218,7 +218,7 @@
             },
             {
                 "name": "productLabelProductAbstracts",
-                "isEditable": false,
+                "isEditable": true,
                 "childDynamicEntityConfiguration": {
                     "tableAlias": "product-label-product-abstracts"
                 },
@@ -334,7 +334,7 @@
         "childRelations": [
             {
                 "name": "productLocalizedAttributes",
-                "isEditable": false,
+                "isEditable": true,
                 "childDynamicEntityConfiguration": {
                     "tableAlias": "product-localized-attributes"
                 },
@@ -399,7 +399,7 @@
             },
             {
                 "name": "productStocks",
-                "isEditable": false,
+                "isEditable": true,
                 "childDynamicEntityConfiguration": {
                     "tableAlias": "stock-products"
                 },
@@ -1474,7 +1474,7 @@
         "childRelations": [
             {
                 "name": "productImageSetToProductImages",
-                "isEditable": false,
+                "isEditable": true,
                 "childDynamicEntityConfiguration": {
                     "tableAlias": "product-image-set-to-product-images"
                 },
@@ -2237,7 +2237,7 @@
         "childRelations": [
             {
                 "name": "priceProductStores",
-                "isEditable": false,
+                "isEditable": true,
                 "childDynamicEntityConfiguration": {
                     "tableAlias": "price-product-stores"
                 },
@@ -3624,7 +3624,7 @@
             },
             {
                 "name": "productRelationStores",
-                "isEditable": false,
+                "isEditable": true,
                 "childDynamicEntityConfiguration": {
                     "tableAlias": "product-relation-stores"
                 },
@@ -3818,7 +3818,7 @@
             },
             {
                 "name": "productLabelStores",
-                "isEditable": false,
+                "isEditable": true,
                 "childDynamicEntityConfiguration": {
                     "tableAlias": "product-label-stores"
                 },
