--- a/tests/PyzTest/Glue/CompanyUserAuth/codeception.yml
+++ b/tests/PyzTest/Glue/CompanyUserAuth/codeception.yml
@@ -34,6 +34,7 @@ suites:
                 - \PyzTest\Glue\Auth\Helper\CompanyMailConnectorDependencyHelper
                 - \SprykerTest\Service\Container\Helper\ContainerHelper
                 - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
+                - \SprykerTest\Zed\Testify\Helper\Business\BusinessHelper
             config:
                 \SprykerTest\Glue\Testify\Helper\GlueRest:
                     depends: PhpBrowser
