--- a/tests/PyzTest/Glue/ProductConfigurations/codeception.yml
+++ b/tests/PyzTest/Glue/ProductConfigurations/codeception.yml
@@ -43,6 +43,7 @@ suites:
                 - \SprykerTest\Shared\PriceProduct\Helper\PriceProductDataHelper
                 - \SprykerTest\Service\Container\Helper\ContainerHelper
                 - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
+                - \SprykerTest\Zed\Testify\Helper\Business\BusinessHelper
             config:
                 \SprykerTest\Glue\Testify\Helper\GlueRest:
                     depends: PhpBrowser
