--- a/tsconfig.mp.json
+++ b/tsconfig.mp.json
@@ -8,12 +8,21 @@
             "@mp/agent-security-merchant-portal-gui": [
                 "vendor/spryker/spryker/Bundles/AgentSecurityMerchantPortalGui/mp.public-api.ts"
             ],
+            "@mp/comment-merchant-portal-gui": [
+                "vendor/spryker/spryker/Bundles/CommentMerchantPortalGui/mp.public-api.ts"
+            ],
             "@mp/dashboard-merchant-portal-gui": [
                 "vendor/spryker/spryker/Bundles/DashboardMerchantPortalGui/mp.public-api.ts"
             ],
             "@mp/dummy-merchant-portal-gui": ["vendor/spryker/spryker/Bundles/DummyMerchantPortalGui/mp.public-api.ts"],
             "@mp/merchant-profile-merchant-portal-gui": [
                 "vendor/spryker/spryker/Bundles/MerchantProfileMerchantPortalGui/mp.public-api.ts"
+            ],
+            "@mp/merchant-relation-request-merchant-portal-gui": [
+                "vendor/spryker/spryker/Bundles/MerchantRelationRequestMerchantPortalGui/mp.public-api.ts"
+            ],
+            "@mp/merchant-relationship-merchant-portal-gui": [
+                "vendor/spryker/spryker/Bundles/MerchantRelationshipMerchantPortalGui/mp.public-api.ts"
             ],
             "@mp/product-merchant-portal-gui": [
                 "vendor/spryker/spryker/Bundles/ProductMerchantPortalGui/mp.public-api.ts"
