CC-32421: Merchant relation, frontend dependencies update.

--- a/tsconfig.mp.json
+++ b/tsconfig.mp.json
@@ -8,10 +8,17 @@
             "@mp/agent-security-merchant-portal-gui": [
                 "vendor/spryker/agent-security-merchant-portal-gui/mp.public-api.ts"
             ],
+            "@mp/comment-merchant-portal-gui": ["vendor/spryker/comment-merchant-portal-gui/mp.public-api.ts"],
             "@mp/dashboard-merchant-portal-gui": ["vendor/spryker/dashboard-merchant-portal-gui/mp.public-api.ts"],
             "@mp/dummy-merchant-portal-gui": ["vendor/spryker/dummy-merchant-portal-gui/mp.public-api.ts"],
             "@mp/merchant-profile-merchant-portal-gui": [
                 "vendor/spryker/merchant-profile-merchant-portal-gui/mp.public-api.ts"
+            ],
+            "@mp/merchant-relation-request-merchant-portal-gui": [
+                "vendor/spryker/merchant-relation-request-merchant-portal-gui/mp.public-api.ts"
+            ],
+            "@mp/merchant-relationship-merchant-portal-gui": [
+                "vendor/spryker/merchant-relationship-merchant-portal-gui/mp.public-api.ts"
             ],
             "@mp/product-merchant-portal-gui": ["vendor/spryker/product-merchant-portal-gui/mp.public-api.ts"],
             "@mp/product-offer-merchant-portal-gui": [
