CC-32421: Merchant relation, frontend dependencies update.

--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
         "@prettier/plugin-xml": "~0.13.1",
         "@spryker/frontend-config.eslint": "~0.1.0",
         "@spryker/frontend-config.prettier": "~0.0.5",
-        "@spryker/frontend-config.stylelint": "~0.0.5",
+        "@spryker/frontend-config.stylelint": "^0.0.5",
         "@spryker/oryx-for-zed": "^3.3.0",
         "@types/jest": "~28.1.1",
         "@types/node": "~14.14.33",
