--- a/buddy.yml
+++ b/buddy.yml
@@ -1230,7 +1230,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
-  resources: 'LARGE'
+  resources: 'XLARGE'
   actions:
       - action: 'Install Composer'
         type: 'BUILD'
@@ -1287,7 +1287,7 @@
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
-  resources: 'LARGE'
+  resources: 'XLARGE'
   actions:
       - action: 'Install Composer'
         type: 'BUILD'
