CC-33200 Enabled Cypress CI. (#8734)
Enable Cypress CI.

--- a/composer.json
+++ b/composer.json
@@ -151,7 +151,8 @@
         "spryker-sdk/evaluator": "dev-master",
         "spryker-sdk/async-api": "^0.3.1",
         "spryker/profiler": "dev-master",
-        "spryker/commerce-k6-performance-tests": "dev-master"
+        "spryker/commerce-k6-performance-tests": "dev-master",
+        "spryker/cypress-tests": "dev-master"
     },
     "autoload": {
         "psr-4": {
@@ -225,6 +226,10 @@
         {
             "type": "git",
             "url": "git@github.com:spryker/commerce-k6-performance-tests.git"
+        },
+        {
+            "type": "git",
+            "url": "git@github.com:spryker/cypress-tests.git"
         }
     ],
     "scripts": {
