--- a/buddy.yml
+++ b/buddy.yml
@@ -17,7 +17,7 @@
         execute_commands:
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE npm install --location=global snyk'
-            - '.ci/snippet/RUN snyk monitor --all-projects --org=c408eea4-f0a4-4d7a-846d-5457aefa0cac'
+            - '.ci/snippet/RUN snyk monitor --all-projects --org=c408eea4-f0a4-4d7a-846d-5457aefa0cac --exclude=project.json'
             - '.ci/snippet/RUN snyk test --all-projects --org=c408eea4-f0a4-4d7a-846d-5457aefa0cac --severity-threshold=high'
             - '.ci/snippet/FINISH'
         shell: 'BASH'
