--- a/tsconfig.mp.json
+++ b/tsconfig.mp.json
@@ -1,6 +1,7 @@
 {
     "extends": "./tsconfig.base.json",
     "compilerOptions": {
+        "target": "ES2022",
         "paths": {
             "@mp/agent-dashboard-merchant-portal-gui": [
                 "vendor/spryker/spryker/Bundles/AgentDashboardMerchantPortalGui/mp.public-api.ts"
