--- a/package.json
+++ b/package.json
@@ -76,8 +76,8 @@
         "@prettier/plugin-xml": "~0.13.1",
         "@spryker/frontend-config.eslint": "~0.1.0",
         "@spryker/frontend-config.prettier": "~0.0.5",
-        "@spryker/frontend-config.stylelint": "^0.0.6",
-        "@spryker/oryx-for-zed": "^3.3.0",
+        "@spryker/frontend-config.stylelint": "~0.0.6",
+        "@spryker/oryx-for-zed": "~3.4.2",
         "@types/jest": "~28.1.1",
         "@types/node": "~14.14.33",
         "@types/webpack": "~5.28.0",
@@ -110,7 +110,7 @@
         "sass-resources-loader": "~2.2.5",
         "stylelint": "~16.2.1",
         "stylelint-config-standard-less": "~3.0.1",
-        "stylelint-config-standard-scss": "^13.0.0",
+        "stylelint-config-standard-scss": "~13.0.0",
         "terser-webpack-plugin": "~5.3.8",
         "ts-node": "~10.9.1",
         "tslib": "~2.6.2",
